--- a/starter_code/public/stylesheets/styles.css
+++ b/starter_code/public/stylesheets/styles.css
@@ -5,4 +5,90 @@ dark-blue: #0A2C42;
 grey: rgba(145, 145, 145, 0.481);
 font-family: Arial, Helvetica, sans-serif
 */
+* {
+    margin: 0;
+    padding: 0;
+  }
   
+  body {
+    background-color: #f7f9f9;
+    font-family: Arial, Helvetica, sans-serif;
+  
+    /* position for footer to be absolute */
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  .nav-container {
+    /* border: 1px solid blue; */
+  
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  
+    height: 4em;
+  
+    background-color: #2081c3;
+    color: #f7f9f9;
+  }
+  
+  #nav-home {
+    margin-left: 4em;
+  }
+  
+  .nav-container div {
+    margin-right: 2em;
+  }
+  
+  footer {
+    position: absolute;
+    bottom: 0;
+    margin-top: 300px;
+  
+    width: 100%;
+    height: 4.5em; /* Footer height */
+  
+    display: flex;
+    align-items: center;
+  
+    color: white;
+    background-color: #0a2c42;
+  }
+  
+  /* CSS FOR INDEX PAGE */
+  
+  .index-container {
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+    margin-top: 7em;
+  }
+  
+  .index-container img {
+    /* border: 1px solid black; */
+    width: 30em;
+    height: 30em;
+  
+    margin-bottom: 2em;
+  }
+  
+  .index-container a {
+   
+      text-decoration: none;
+      margin-top: 2em;
+  
+  
+      padding: 1em;
+      
+      background-color: #2081C3;
+      color: white;
+      border-radius: 25px;
+  
+  }
+  
+  #bottom-button{
+      margin-bottom: 50px;
+  }
