--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,3 +1,7 @@
 <div class="index-container">
-  
+
+    <img src="images/beer.png" alt="">
+    <a href="beers.hbs"> Check The Beers</a>
+    <a id="bottom-button" href="randomBeers.hbs"> Check a Random Beers</a>
+
 </div>
