Make Nav links and buttons functional

--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,7 +1,9 @@
 <div class="index-container">
 
     <img src="images/beer.png" alt="">
-    <a href="beers.hbs"> Check The Beers</a>
-    <a id="bottom-button" href="randomBeers.hbs"> Check a Random Beers</a>
+
+    <a href="beers"> Check The Beers</a>
+
+    <a  href="randomBeers.hbs" id="bottom-button"> Check a Random Beers</a>
 
 </div>
