Buttons and nav links working

--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -4,6 +4,6 @@
 
     <a href="beers"> Check The Beers</a>
 
-    <a  href="randomBeers.hbs" id="bottom-button"> Check a Random Beers</a>
+    <a  href="randombeers" id="bottom-button"> Check a Random Beers</a>
 
 </div>
