--- a/starter_code/public/stylesheets/styles.css
+++ b/starter_code/public/stylesheets/styles.css
@@ -9,7 +9,7 @@ font-family: Arial, Helvetica, sans-serif
     margin: 0;
     padding: 0;
   }
-  
+
   body {
     background-color: #f7f9f9;
     font-family: Arial, Helvetica, sans-serif;
@@ -32,6 +32,13 @@ font-family: Arial, Helvetica, sans-serif
     color: #f7f9f9;
   }
   
+  .nav-container a { 
+
+    text-decoration: none;
+    color: #f7f9f9;
+
+  }
+
   #nav-home {
     margin-left: 4em;
   }
